; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_util.c_compile_study.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_util.c_compile_study.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [112 x i8] c"Bad regex! pcre_compile() failed at position %i: %s\0AIf you meant to search for a literal string, run ag with -Q\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"pcre_study returned nothing useful. Error: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @compile_study(i32** %0, i32** %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store i8* null, i8** %11, align 8
  store i32 0, i32* %12, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = call i32* @pcre_compile(i8* %13, i32 %14, i8** %11, i32* %12, i32* null)
  %16 = load i32**, i32*** %6, align 8
  store i32* %15, i32** %16, align 8
  %17 = load i32**, i32*** %6, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %5
  %21 = load i32, i32* %12, align 4
  %22 = load i8*, i8** %11, align 8
  %23 = call i32 @die(i8* getelementptr inbounds ([112 x i8], [112 x i8]* @.str, i64 0, i64 0), i32 %21, i8* %22)
  br label %24

24:                                               ; preds = %20, %5
  %25 = load i32**, i32*** %6, align 8
  %26 = load i32*, i32** %25, align 8
  %27 = load i32, i32* %10, align 4
  %28 = call i32* @pcre_study(i32* %26, i32 %27, i8** %11)
  %29 = load i32**, i32*** %7, align 8
  store i32* %28, i32** %29, align 8
  %30 = load i32**, i32*** %7, align 8
  %31 = load i32*, i32** %30, align 8
  %32 = icmp eq i32* %31, null
  br i1 %32, label %33, label %36

33:                                               ; preds = %24
  %34 = load i8*, i8** %11, align 8
  %35 = call i32 @log_debug(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i8* %34)
  br label %36

36:                                               ; preds = %33, %24
  ret void
}

declare dso_local i32* @pcre_compile(i8*, i32, i8**, i32*, i32*) #1

declare dso_local i32 @die(i8*, i32, i8*) #1

declare dso_local i32* @pcre_study(i32*, i32, i8**) #1

declare dso_local i32 @log_debug(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
